namespace AttendanceApp {
    
    
    public partial class Vendors {
        
        protected global::System.Web.UI.HtmlControls.HtmlGenericControl formHeader;
        
        protected global::System.Web.UI.HtmlControls.HtmlGenericControl formTitle;
        
        protected global::System.Web.UI.WebControls.TextBox txtMasterId;
        
        protected global::System.Web.UI.WebControls.TextBox txtVendorName;

        
        protected global::System.Web.UI.WebControls.TextBox txtContactName;
        
        protected global::System.Web.UI.WebControls.TextBox txtContactPhone;
        
        protected global::System.Web.UI.WebControls.TextBox txtAddress;
        
        protected global::System.Web.UI.WebControls.TextBox txtDatedOn;

        
        protected global::System.Web.UI.WebControls.HiddenField hfEditVendorId;
        
        protected global::System.Web.UI.WebControls.HiddenField hfVendorContacts;
        
        protected global::System.Web.UI.WebControls.Button btnCancel;
        
        protected global::System.Web.UI.WebControls.Button btnSave;
        
        protected global::System.Web.UI.WebControls.TextBox txtSearch;
        
        protected global::System.Web.UI.WebControls.Button btnSearch;
        
        protected global::System.Web.UI.WebControls.GridView gvVendors;
        
        protected global::System.Web.UI.WebControls.HiddenField hfHiddenEditVendorId;
        
        protected global::System.Web.UI.WebControls.LinkButton btnHiddenEditTrigger;
        
        protected global::System.Web.UI.WebControls.Label lblMessage;
    }
}
